# study-simple-agentic-document-loader

./: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  main.py  pyproject.toml
.github/workflows/: azure-static-web-apps-jolly-stone-03bc07e00.yml  main_alan-hwp-loader-poc.yml
features/: env.py
features/document_loaders/: __init__.py  file_extensions.py  generic.py  get_loader.py  hwp.py  image_parser.py
features/llms/: __init__.py  get_model.py
server/: app.py  documents_route.py  files_route.py  main_route.py  statics_route.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: app.tsx  index.css
web/src/features/document-loader/: fetcher.ts  index.ts
web/src/features/documents/: convert-size.ts  document-upload.tsx  document.types.ts  documents-root.tsx  documents-store.ts  documents-table.tsx  download-result.ts  index.tsx  use-documents.ts
web/src/features/files/: fetcher.ts  index.tsx  types.ts
