[project]
name = "document-loaders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "azure-storage-blob>=12.27.0",
    "environs>=14.3.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.119.0",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.0",
    "olefile>=0.47",
    "pdfminer-six>=20250506",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "pypdfium2>=4.30.0",
    "python-ulid>=3.1.0",
]


[tool.taskipy.tasks]
# `uv run task dev`
dev = "uvicorn server:app --host localhost --port 8000 --reload"
start = "uvicorn server:app --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = ["taskipy>=1.14.1"]
